--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack": "build --dir",
+    "dist": "build"
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -17,6 +19,18 @@
   "author": "GitHub",
   "license": "CC0-1.0",
   "devDependencies": {
+    "electron-builder": "^21.2.0",
     "electron": "^6.0.2"
+  },
+  "build": {
+    "appId": "com.qazer.instalux",
+    "productName":"InstaAppLux",
+    "win": {
+      "icon": "build/icon.ico"
+    }
+  },
+  "dependencies": {
+    "electron-forge": "^5.2.4",
+    "electron-packager": "^14.0.4"
   }
 }
